feat: take image from dockerhub on start/prod

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,7 +27,7 @@ RUN npm run build
 # Dev stage
 FROM builder as dev
 
-LABEL maintainer "Tim Kormachev (@kormachevt)"
+LABEL maintainer "Tim Kormachev (@wardroid)"
 
 ENV NODE_ENV=development
 ENV FORCE_COLOR=1
@@ -36,7 +36,7 @@ CMD /wait && npm run dev
 # Prod stage
 FROM node as prod
 
-LABEL maintainer "Tim Kormachev (@kormachevt)"
+LABEL maintainer "Tim Kormachev (@wardroid)"
 
 ENV NODE_ENV=production
 ENV FORCE_COLOR=1
